scripts: enable building with java 17 and java 22